--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "build": "npm run docs && webpack --progress --colors --bail",
     "coverage": "tap ./test/{unit,integration}/*.js --coverage --coverage-report=lcov",
     "deploy": "touch playground/.nojekyll && gh-pages -t -d playground -m \"Build for $(git log --pretty=format:%H -n1)\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "docs": "jsdoc -c .jsdoc.json",
     "i18n:src": "mkdirp translations/core && format-message extract --out-file translations/core/en.json src/extensions/**/index.js",
     "i18n:push": "tx-push-src scratch-editor extensions translations/core/en.json",
@@ -45,42 +47,42 @@
     "scratch-parser": "5.0.0",
     "scratch-sb1-converter": "0.2.7",
     "scratch-translate-extension-languages": "0.0.20181205140428",
-    "socket.io-client": "2.0.4",
+    "socket.io-client": "^2.2.0",
     "text-encoding": "0.7.0",
     "worker-loader": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.4.4",
     "adm-zip": "0.4.11",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.5.4",
     "docdash": "^1.0.0",
-    "eslint": "^5.3.0",
+    "eslint": "^5.16.0",
     "eslint-config-scratch": "^5.0.0",
     "expose-loader": "0.7.5",
     "file-loader": "^2.0.0",
-    "format-message-cli": "6.2.0",
+    "format-message-cli": "^6.2.1",
     "gh-pages": "^1.2.0",
     "in-publish": "^2.0.0",
-    "jsdoc": "^3.5.5",
+    "jsdoc": "^3.6.2",
     "json": "^9.0.4",
     "lodash.defaultsdeep": "4.6.0",
     "pngjs": "^3.3.2",
     "scratch-audio": "latest",
     "scratch-blocks": "latest",
-    "scratch-l10n": "^3.1.20181129221712",
+    "scratch-l10n": "^3.3.20190516144548",
     "scratch-render": "latest",
     "scratch-storage": "^1.1.0",
     "scratch-svg-renderer": "latest",
     "script-loader": "0.7.2",
     "stats.js": "^0.17.0",
-    "tap": "^12.0.1",
+    "tap": "^14.0.0",
     "tiny-worker": "^2.1.1",
     "uglifyjs-webpack-plugin": "1.2.7",
-    "webpack": "^4.16.5",
+    "webpack": "^4.31.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.4.1"
   }
 }
