--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "adm-zip": "0.4.11",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "copy-webpack-plugin": "^4.5.4",
+    "copy-webpack-plugin": "^5.1.1",
     "docdash": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-scratch": "^5.0.0",
@@ -65,9 +65,9 @@
     "format-message-cli": "^6.2.1",
     "gh-pages": "^1.2.0",
     "in-publish": "^2.0.0",
-    "jsdoc": "^3.6.2",
+    "jsdoc": "^3.6.3",
     "json": "^9.0.4",
-    "lodash.defaultsdeep": "4.6.0",
+    "lodash.defaultsdeep": "^4.6.1",
     "pngjs": "^3.3.2",
     "scratch-audio": "latest",
     "scratch-blocks": "latest",
