--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "scratch-parser": "5.0.0",
     "scratch-sb1-converter": "0.2.7",
     "scratch-translate-extension-languages": "0.0.20181205140428",
+    "serialize-javascript": "^3.0.0",
     "socket.io-client": "^2.3.0",
     "text-encoding": "0.7.0",
     "worker-loader": "^1.1.1"
