--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "canvas-toBlob": "1.0.0",
     "decode-html": "2.0.0",
     "diff-match-patch": "1.0.4",
+    "firebase": "^7.21.1",
     "format-message": "6.2.1",
     "htmlparser2": "3.10.0",
     "immutable": "3.8.1",
@@ -84,5 +85,12 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "bugs": {
+    "url": "https://github.com/LLK/scratch-vm/issues"
+  },
+  "directories": {
+    "doc": "docs",
+    "test": "test"
   }
 }
