--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "decode-html": "2.0.0",
     "diff-match-patch": "1.0.4",
     "firebase": "^7.21.1",
+    "firebase-admin": "^9.2.0",
     "format-message": "6.2.1",
     "htmlparser2": "3.10.0",
     "immutable": "3.8.1",
