--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "canvas-toBlob": "1.0.0",
     "decode-html": "2.0.0",
     "diff-match-patch": "1.0.4",
+    "encoding-japanese": "1.0.30",
     "firebase": "^7.21.1",
     "firebase-admin": "^9.2.0",
     "format-message": "6.2.1",
     "htmlparser2": "3.10.0",
     "immutable": "3.8.1",
+    "jsqr": "1.3.1",
     "jszip": "^3.2.2",
     "minilog": "3.1.0",
     "nets": "3.2.0",
